// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextSkeleton /> should render a text skeleton 1`] = `
<TextSkeleton
  showSkeleton={true}
  type="body"
>
  <Styled(styled.span)
    textType="body"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "hLTnhI",
            "rules": Array [
              "
  animation: ",
              "
  ",
              Keyframes {
                "id": "sc-keyframes-jXsTbE",
                "inject": [Function],
                "name": "jXsTbE",
                "rules": Array [
                  "@-webkit-keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                  "@keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                ],
                "toString": [Function],
              },
              " .8s linear infinite alternate;
",
              ";
  backface-visibility: hidden;
  will-change: opacity;
  background-color: ",
              "#E1E6EB",
              ";
  border: 1px solid ",
              "#E1E6EB",
              ";
  display: inline-flex;
",
              "
  border-radius: 4px;
  width: ",
              [Function],
              ";
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.span)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      textType="body"
    >
      <span
        className="hLTnhI"
      >
        ‌
      </span>
    </StyledComponent>
  </Styled(styled.span)>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set type 1`] = `
<TextSkeleton
  showSkeleton={true}
  type="display"
>
  <Styled(styled.span)
    textType="display"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "fJMnpR",
            "rules": Array [
              "
  animation: ",
              "
  ",
              Keyframes {
                "id": "sc-keyframes-jXsTbE",
                "inject": [Function],
                "name": "jXsTbE",
                "rules": Array [
                  "@-webkit-keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                  "@keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                ],
                "toString": [Function],
              },
              " .8s linear infinite alternate;
",
              ";
  backface-visibility: hidden;
  will-change: opacity;
  background-color: ",
              "#E1E6EB",
              ";
  border: 1px solid ",
              "#E1E6EB",
              ";
  display: inline-flex;
",
              "
  border-radius: 4px;
  width: ",
              [Function],
              ";
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.span)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      textType="display"
    >
      <span
        className="fJMnpR"
      >
        ‌
      </span>
    </StyledComponent>
  </Styled(styled.span)>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set width 1`] = `
<TextSkeleton
  showSkeleton={true}
  type="body"
  width={250}
>
  <Styled(styled.span)
    textType="body"
    width="250px"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "dUpGfC",
            "rules": Array [
              "
  animation: ",
              "
  ",
              Keyframes {
                "id": "sc-keyframes-jXsTbE",
                "inject": [Function],
                "name": "jXsTbE",
                "rules": Array [
                  "@-webkit-keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                  "@keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                ],
                "toString": [Function],
              },
              " .8s linear infinite alternate;
",
              ";
  backface-visibility: hidden;
  will-change: opacity;
  background-color: ",
              "#E1E6EB",
              ";
  border: 1px solid ",
              "#E1E6EB",
              ";
  display: inline-flex;
",
              "
  border-radius: 4px;
  width: ",
              [Function],
              ";
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.span)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      textType="body"
      width="250px"
    >
      <span
        className="dUpGfC"
        width="250px"
      >
        ‌
      </span>
    </StyledComponent>
  </Styled(styled.span)>
</TextSkeleton>
`;
